<?xml version="1.0" encoding="utf-8"?>
<!-- 
@author William Blankenship
@email william.jblankenship(at)gmail.com
@date 11/12/11
 -->
<resources>

    <string name="app_name">Health Calculator</string>
    <string name="Greeting">How Healthy Are You?</string>
    <string name="weight">Weight:</string>
    <string name="weightInput">Enter Weight in LBS</string>
    <string name="ageInput">Enter Age in Years</string>
    <string name="us">U.S.</string>
    <string name="metric">Metric</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button">Calculate BMR</string>
    <string name="bmiMessage">Your BMI:</string>
    <string name="bmrMessage">Your BMR:</string>
    <string name="resultGreeting">Your Calculated Health</string>
    <string name="goBack">Go Back</string>

</resources>